--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <img id="banner" src="banner.jpg" alt="Banner" height="240">
 
     <h1>
-        Welcome to Jovian
+        Welcome to Jovian's 
     </h1>
 
     <div id="about">
