--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <img id="banner" src="banner.jpg" alt="Banner" height="240">
 
     <h1>
-        About Me
+        About Jovian
     </h1>
 
     <div id="about">
